# cf-search

./: .gitignore  README.md  pyproject.toml  scratch.ipynb
cf_search/query/: __init__.py  api.py  data_manager.py  interpreter.py  schema.py  scratch.ipynb  tokens.py  tree_sitter.py
tests/: test_cf_search.py
