[tool.poetry]
name = "cf-search"
version = "0.1.0"
description = ""
authors = ["Akshat Bubna <akshatb42@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.8"
requests = "^2.25.1"
lxml = "^4.6.3"
notebook = "^6.3.0"
SQLAlchemy = "1.3.17"
graphql-compiler = "2.0.0.dev29"

[tool.poetry.dev-dependencies]
pytest = "^5.2"
mypy = "^0.812"
black = "^20.8b1"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
